--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_cmake_uncrustify
-	previous = 
-	base = 66787d123188
+	previous = 66787d123188
+	base = 3cd3db9416d7
 	trim = 
 	trimbase = 
