--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rmf_cmake_uncrustify
+	parent = release/rolling/rmf_cmake_uncrustify/1.2.0-5
 	previous = 66787d123188
 	base = 5d66f52f158c
 	trim = 
